[gd_scene load_steps=3 format=3 uid="uid://sujd7jl1o21l"]

[ext_resource type="FontFile" uid="uid://c5ycbfo3vay41" path="res://assets/kongtext.ttf" id="1_uwrxv"]
[ext_resource type="Script" uid="uid://kw33x4kh567" path="res://scripts/game.gd" id="1_yqjtg"]

[node name="Game" type="Node"]
script = ExtResource("1_yqjtg")

[node name="PauseMenu" type="ColorRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -868.0
offset_top = -425.0
offset_right = -343.0
offset_bottom = 142.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0.34270614, 0.00088926376, 0.8674606, 1)

[node name="ContinueButton" type="Button" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -172.5
offset_right = 160.0
offset_bottom = -27.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_uwrxv")
theme_override_font_sizes/font_size = 32
text = "Continue"

[node name="LeaveButton" type="Button" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = 27.5
offset_right = 160.0
offset_bottom = 172.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_uwrxv")
theme_override_font_sizes/font_size = 32
text = "Leave"

[connection signal="pressed" from="PauseMenu/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="PauseMenu/LeaveButton" to="." method="_on_leave_button_pressed"]
